# dsaac

./: CMakeLists.txt  Makefile  README.md
doc/: ch0_setup.md  ch1_list.md
doc/.obsidian/: workspace.json
examples/: CMakeLists.txt  cursor.c  lists.c
include/: adtree.h  avltree.h  binarytree.h  cursor.h  init.h  list.h  panic.h  queue.h  stacka.h  stackl.h  tree.h
src/: CMakeLists.txt  adtree.c  avltree.c  binarytree.c  cursor.c  hashtable.c  list.c  queue.c  stacka.c  stackl.c  tree.c
tests/: CMakeLists.txt  test_list.c
